tuning the model

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 hot encode genre & topic"
+    "# one hot encode genre & topic"
    ]
   }
  ],
